[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["HardLine89 <dmitrymakarov089@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pygame = "^2.6.1"
setuptools = "^75.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
